--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "bootstrap": "5.2.3",
+    "install": "^0.13.0",
+    "lightbox.js-react": "^1.0.8",
+    "lightgallery": "^2.7.2",
+    "npm": "^10.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-image-video-lightbox": "^3.0.1",
     "react-scripts": "5.0.1",
     "swiper": "^11.1.4",
     "web-vitals": "^2.1.0"
