--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "lightgallery": "^2.7.2",
     "npm": "^10.8.1",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.51.5",
     "react-image-video-lightbox": "^3.0.1",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "swiper": "^11.1.4",
     "web-vitals": "^2.1.0"
