--- a/.env.production.local
+++ b/.env.production.local
@@ -1,2 +1,2 @@
-REACT_APP_baseUrl=http://elhosiny.somee.com/api/
-REACT_APP_baseImageUrl=http://elhosiny.somee.com/
+REACT_APP_baseUrl=https://elhosiny.somee.com/api/
+REACT_APP_baseImageUrl=https://elhosiny.somee.com/
