--- a/.env.production.local
+++ b/.env.production.local
@@ -1,2 +1,2 @@
-REACT_APP_baseUrl=https://elhosiny.somee.com/api/
-REACT_APP_baseImageUrl=https://elhosiny.somee.com/
+VITE_baseUrl=https://elhosiny.somee.com/api/
+VITE_baseImageUrl=https://elhosiny.somee.com/
