--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@vitejs/plugin-react": "^4.3.1",
     "bootstrap": "5.2.3",
     "install": "^0.13.0",
     "lightbox.js-react": "^1.0.8",
@@ -21,16 +22,15 @@
     "react-hook-form": "^7.51.5",
     "react-image-video-lightbox": "^3.0.1",
     "react-router-dom": "^6.23.1",
-    "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
     "swiper": "^11.1.4",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "serve": "vite preview"
   },
   "eslintConfig": {
     "extends": [
@@ -52,14 +52,18 @@
   },
   "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610",
   "devDependencies": {
+    "@swc/core": "^1.6.5",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
+    "@vitejs/plugin-react-swc": "^3.7.0",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.34.0",
     "eslint-plugin-typescript": "^0.14.0",
     "prettier": "^2.5.0",
     "sass": "^1.70.0",
     "ts-migrate": "^0.1.35",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vite": "^5.3.1",
+    "vite-plugin-svgr": "^4.2.0"
   }
 }
