--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
+    "react-fa-icon-picker": "^1.0.3",
     "react-hook-form": "^7.51.5",
     "react-image-video-lightbox": "^3.0.1",
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
     "swiper": "^11.1.4",
+    "vite-tsconfig-paths": "^4.3.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
