--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,6 +33,6 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["src", "src/services"],
+  "include": ["src", "vite.config.ts"],
   "exclude": ["node_modules"]
 }
