--- a/.env.development.local
+++ b/.env.development.local
@@ -1,4 +1,4 @@
-VITE_baseUrl=http://localhost:5082/api/
-VITE_baseImageUrl=http://localhost:5082/
-# VITE_baseUrl=https://elhosiny.somee.com/api/
-# VITE_baseImageUrl=https://elhosiny.somee.com/
+# VITE_baseUrl=http://localhost:5082/api/
+# VITE_baseImageUrl=http://localhost:5082/
+VITE_baseUrl=https://elhosiny.somee.com/api/
+VITE_baseImageUrl=https://elhosiny.somee.com/
