--- a/.env.production.local
+++ b/.env.production.local
@@ -1,2 +1,2 @@
 VITE_baseUrl=https://elhosiny.somee.com/api/
-VITE_baseImageUrl=https://elhosiny.somee.com/
+VITE_baseImageUrl=https://elhosiny.somee.com
